--- a/planner-fe/src/app/sprint-detail/sprint-detail.component.css
+++ b/planner-fe/src/app/sprint-detail/sprint-detail.component.css
@@ -7,6 +7,10 @@ nz-alert {
 }
 
 [nz-button] {
-  margin-right: 0;
+  margin-right: 8px;
   margin-bottom: 12px;
+}
+
+.search-area {
+  text-align: right;
 }
