--- a/planner-fe/src/app/app.component.css
+++ b/planner-fe/src/app/app.component.css
@@ -10,10 +10,16 @@
 }
 
 .menu-sidebar {
-  position: relative;
-  z-index: 10;
+  overflow: auto;
+  position: fixed;
   min-height: 100vh;
+  height: 100%;
   box-shadow: 2px 0 6px rgba(0,21,41,.35);
+  left: 0;
+}
+
+.right-layout {
+  margin-left: 256px;
 }
 
 .header-trigger {
@@ -76,5 +82,6 @@ nz-content {
 .inner-content {
   padding: 24px;
   background: #fff;
-  height: 100%;
+  height: 100vh;
+  min-height: 100vh;
 }
