--- a/planner-fe/src/app/app.component.html
+++ b/planner-fe/src/app/app.component.html
@@ -1,9 +1,9 @@
 <nz-layout class="app-layout">
   <nz-sider class="menu-sidebar"
-            nzCollapsible
             nzWidth="256px"
             nzBreakpoint="md"
             [(nzCollapsed)]="isCollapsed"
+            [nzCollapsedWidth]="0"
             [nzTrigger]="null">
     <div class="sidebar-logo">
       <h1>Planner</h1>
@@ -24,15 +24,12 @@
       </li>
     </ul>
   </nz-sider>
-  <nz-layout>
+  <nz-layout class="right-layout">
     <nz-header>
       <div class="app-header">
-        <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
-            <span class="trigger"
-                  nz-icon
-                  [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"
-            ></span>
-        </span>
+<!--        <span class="header-trigger" (click)="isCollapsed = !isCollapsed">-->
+<!--            <span class="trigger" nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"></span>-->
+<!--        </span>-->
       </div>
     </nz-header>
     <nz-content>
